# fullstack-fastapi

api/: .gitignore  pyproject.toml
api/api/: main.py  routes.py  server.py
api/controllers/: ShareController.py
api/database/: create_tables.py
api/models/: Share.py
api/tests/: conftest.py
api/tests/api/: test_root.py  test_shares.py
django/properteasy/: requirements.txt
django/properteasy/django/: manage.py
django/properteasy/django/properteasy/: .env.example  asgi.py  settings.py  urls.py  views.py  wsgi.py
django/properteasy/django/property/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django/properteasy/django/rental/: admin.py  forms.py  models.py  urls.py  views.py
django/sharevidz-project/: db.sqlite3  manage.py
django/sharevidz-project/gallery/: admin.py  forms.py  models.py  views.py
django/sharevidz-project/gallery/migrations/: 0001_initial.py  0002_rename_hall_video_gallery.py
django/sharevidz-project/home/: admin.py  models.py  views.py
django/sharevidz-project/home/migrations/: 0001_initial.py
django/sharevidz-project/sharevidz/: asgi.py  settings.py  urls.py  wsgi.py
fastapi/: .gitignore  db.sqlite  pyproject.toml
fastapi/api/: routes.py  server.py
fastapi/controllers/: share_controller.py
fastapi/database/: create_tables.py
fastapi/models/: share.py
fastapi/tests/: testedb.sqlite
fastapi/tests/api/: test_shares.py
fastapi/tests/unit/model/: test_share.py
fastapi/tests/utils/: shares.py
telegram-scrapbot/: README.md  bot.py  urinotas.py  urinotasbotInLine.py
(+25 files in other folders)
