[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jackson Graff <jacksongraff@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.78.0"
ormar = {extras = ["sqlite"], version = "^0.11.1"}
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
fastapi = {extras = ["all"], version = "^0.78.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "api.server:start"
config-db = "api.server:config_database"